<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_welcome_title"
            android:textColor="#fff"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_welcome_description"
            android:textColor="#fff"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <Button
                android:id="@+id/login_read_more_button"
                android:layout_margin="10dp"
                android:textColor="#fff"
                android:background="@drawable/buttonstyleorange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LEARN MORE"/>


            <Button
                android:id="@+id/login_join_agenda_button"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="JOIN THE AGENDA"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/login_username_edit_text"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="USERNAME"
            android:text="hadi"/>

        <EditText
            android:id="@+id/login_user_password_edit_text"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PASSWORD"
            android:text="IK1RF"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyleorange"
            android:text="@string/login_button_text"
            android:textColor="#fff"
            android:drawableRight="@drawable/ic_send_black_24dp" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>