<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fcfcfc">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/app_bar_collapsing_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:title="@string/app_title"
            app:expandedTitleMarginStart="40dp"
            app:expandedTitleMarginEnd="50dp"
            android:background="@drawable/material_background">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_id"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <!--BEGINING OF MAIN VIEW WRAPPER-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fcfcfc"
            android:gravity="center"
            android:id="@+id/ll">



            <!--BEGINING OF BLOCK FOR REPORTING REVENUE-->

            <!--<LinearLayout-->
                <!--android:clipToPadding="false"-->
                <!--android:gravity="center"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<android.support.v7.widget.CardView-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:clickable="true"-->
                    <!--android:id="@+id/add_revenue_card"-->
                    <!--android:layout_width="160dp"-->
                    <!--android:layout_height="190dp"-->
                    <!--android:layout_margin="10dp">-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:orientation="vertical"-->
                        <!--android:gravity="center">-->
                        <!--<ImageView-->
                            <!--android:layout_width="64dp"-->
                            <!--android:layout_height="64dp"-->
                            <!--android:background="@drawable/cerclebackgroundpurple"-->
                            <!--android:src="@drawable/ic_control_point_black_24dp"-->
                            <!--android:padding="10dp"/>-->

                        <!--&lt;!&ndash;android:src="@drawable/ic_attach_money_black_24dp"&ndash;&gt;-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textStyle="bold"-->
                            <!--android:layout_marginTop="10dp"-->
                            <!--android:text="Add Revenue"/>-->
                        <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="1dp"-->
                            <!--android:background="@color/lightgray"-->
                            <!--android:layout_margin="10dp"/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:gravity="center"-->
                            <!--android:text="@string/add_revenue_button_description"-->
                            <!--android:padding="5dp"-->
                            <!--android:textColor="@android:color/darker_gray"/>-->

                    <!--</LinearLayout>-->

                <!--</android.support.v7.widget.CardView>-->


                <!--<android.support.v7.widget.CardView-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:clickable="true"-->
                    <!--android:id="@+id/view_revenue_card"-->
                    <!--android:layout_width="160dp"-->
                    <!--android:layout_height="190dp"-->
                    <!--android:layout_margin="10dp">-->
                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:orientation="vertical"-->
                        <!--android:gravity="center">-->
                        <!--<ImageView-->
                            <!--android:layout_width="64dp"-->
                            <!--android:layout_height="64dp"-->
                            <!--android:background="@drawable/cerclebackgroundpink"-->
                            <!--android:src="@drawable/ic_lightbulb_outline_black_24dp"-->
                            <!--android:padding="10dp"/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textStyle="bold"-->
                            <!--android:layout_marginTop="10dp"-->
                            <!--android:text="View Past Reports"/>-->
                        <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="1dp"-->
                            <!--android:background="@color/lightgray"-->
                            <!--android:layout_margin="10dp"/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:gravity="center"-->
                            <!--android:text="View past revenue reports"-->
                            <!--android:padding="5dp"-->
                            <!--android:textColor="@android:color/darker_gray"/>-->

                    <!--</LinearLayout>-->
                <!--</android.support.v7.widget.CardView>-->

            <!--</LinearLayout>-->


            <!--END OF BLOCK FOR REPORTING REVENUE-->






            <!--BEGINING OF BLOCK FOR REGISTERING A TAX PAYER-->

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/register_a_tax_payer_card"
                    android:clickable="true"
                    android:layout_width="340dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp">
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundgreen"
                            android:src="@drawable/ic_control_point_black_24dp"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="Register A Tax Payer"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/register_a_tax_payer_button_description"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <!--END OF BLOCK FOR REGISTERING A TAX PAYER-->




            <!--BEGINING OF BLOCK FOR VIEWING PROFILE AND SENDING MESSAGE-->
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/view_profile_card"
                    android:clickable="true"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:src="@drawable/ic_wifi_black_24dp"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="View Profile"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/view_user_profile_button_description"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/send_message_card"
                    android:clickable="true"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundyello"
                            android:padding="10dp"
                            android:src="@drawable/ic_attach_file_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Send Message"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Send message to district administrators"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


            <!--END OF BLOCK FOR VIEWING PROFILE AND SENDING MESSAGE-->




        </LinearLayout>

        <!--BEGINING OF MAIN VIEW WRAPPER-->


    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>